// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux, game passes e2e test: Add players and set rounds 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {},
  },
  "rounds": Object {
    "current": 1,
    "progress": 0,
    "total": 2,
  },
  "status": "UNINITIALIZED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Finished round 1 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 2,
    "progress": 0,
    "total": 2,
  },
  "status": "ROUND_INTERMISSION",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Finished round 2, game ended 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
          Object {
            "dist": -1,
            "round": 2,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
          Object {
            "dist": -1,
            "round": 2,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 3,
    "progress": 0,
    "total": 2,
  },
  "status": "FINISHED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Game initialized 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 1,
    "progress": 0,
    "total": 2,
  },
  "status": "ROUND_INTERMISSION",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 1, player 1 scored 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p2",
      "p1",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 1,
    "progress": 1,
    "total": 2,
  },
  "status": "ROUND_INTERMISSION",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 1, player 2 scored 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 1,
    "progress": 2,
    "total": 2,
  },
  "status": "ROUND_ENDED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 2, player 1 scored 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p2",
      "p1",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
          Object {
            "dist": -1,
            "round": 2,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 2,
    "progress": 1,
    "total": 2,
  },
  "status": "ROUND_INTERMISSION",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 2, player 1 scored 2`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p2",
      "p1",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
          Object {
            "dist": -1,
            "round": 2,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 2,
    "progress": 1,
    "total": 2,
  },
  "status": "ROUND_INTERMISSION",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 2, player 2 scored 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
          Object {
            "dist": -1,
            "round": 2,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
          Object {
            "dist": -1,
            "round": 2,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 2,
    "progress": 2,
    "total": 2,
  },
  "status": "ROUND_ENDED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 2, reset 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 2,
    "progress": 0,
    "total": 2,
  },
  "status": "ROUND_INTERMISSION",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Started round 1 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 1,
    "progress": 0,
    "total": 2,
  },
  "status": "ROUND_STARTED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Started round 2 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Object {
    "names": Array [
      "p1",
      "p2",
    ],
    "scores": Object {
      "p1": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
      "p2": Object {
        "results": Array [
          Object {
            "dist": -1,
            "round": 1,
            "score": 0,
            "selected": null,
          },
        ],
        "totalScore": 0,
      },
    },
  },
  "rounds": Object {
    "current": 2,
    "progress": 0,
    "total": 2,
  },
  "status": "ROUND_STARTED",
  "timeLimit": 60,
}
`;
